TP-463 fix collapsing status message

--- a/public/themes/custom/palvelumanuaali/components/02-molecules/status/_status.scss
+++ b/public/themes/custom/palvelumanuaali/components/02-molecules/status/_status.scss
@@ -1,3 +1,6 @@
+.search-page .status-message-wrapper {
+  grid-column: 1/4;
+}
 .status__list {
   @include list-reset;
 
